# infer_mask_rcnn

./: .gitignore  CMakeLists.txt  MaskRCNN.cpp  MaskRCNN.h  MaskRCNN.pro  MaskRCNNGlobal.h  README.md  infer_mask_rcnn.pro
Model/: coco_names.txt  download_model.txt
